# RustRenderer

./: Cargo.toml  README.md  build.rs  todo
src/: api.rs  chess.rs  engine.rs  games_root.rs  glam_utils.rs  loading_object_tests.rs  main.rs  maths.rs  mouse_drag_controller.rs  opengl_context.rs  osu.rs  pacman.rs  render_gl.rs  renderer.rs  resources.rs  shape_quadrangle.rs  shape_triangle.rs  shapes.rs  submarine.rs  texture.rs  triangle.rs  vertex.rs
src/api/: audio.rs  camera.rs  coordinate_system.rs  drawable.rs  resource_manager.rs
src/assets/loading-objects-tests/: test_object.json
src/assets/shaders/: chessboard.frag
src/chess/: allowed_move.rs  chess_game.rs  chessboard.rs  field.rs  infrastructure.rs  move_logic.rs  piece.rs  resource_manager.rs
src/engine/: api.rs  base_object.rs  engine.rs  game_controller.rs  opengl_context.rs  render_gl.rs  renderer.rs  rendering.rs  resources.rs  serialization.rs
src/engine/api/: audio.rs  camera.rs  colour.rs  coordinate_system.rs  countdown_timer.rs  drawable.rs  engine_utilities.rs  game_object.rs  maths.rs  render_util.rs  resource_manager.rs  text_game_object.rs  texture.rs  tile_map.rs
src/loading_object_tests/: loading_objects_tests.rs
src/maths/: circle.rs  line.rs  point.rs  quadrangle.rs  segment.rs  shape_quadrangle.rs  shape_triangle.rs  shapes_common.rs  triangle.rs  vertex.rs
src/osu/: osu_game.rs  playing_field.rs  ring.rs
src/pacman/: pacman_game.rs
src/render_gl/: buffer.rs  data.rs  shader.rs  shape_drawing_component.rs  viewport.rs
src/submarine/: submarine_game.rs
(+33 files in other folders)
