[package]
name = "TestRust"
version = "0.1.0"
authors = ["iwek <miwanczuk7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.2", features = ["bundled", "static-link", "image"] }
gl = "0.6.0"
image = "0.23.14"

[build-dependencies]
walkdir = "2.3.2"